--- a/index.html
+++ b/index.html
@@ -85,11 +85,40 @@
 
     <!-- Màn đồng ý (ảnh: hug.png; không có thì hiện yeu-em.svg) -->
     <section class="screen screen-yes" id="screenYes" hidden>
+      <div class="love-text-bg" aria-hidden="true">
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+        <span class="love-text">anh yêu em</span>
+      </div>
       <img class="yes-image" src="hug.png" alt="Ảnh yêu thương" onerror="this.src='yeu-em.svg'">
       <p class="message-big">Yêu em nhiều lắm!</p>
       <p class="message-small">Cảm ơn em đã đồng ý làm người yêu anh</p>
     </section>
   </main>
+
+  <!-- Nhạc nền local (đổi src thành file nhạc của bạn, ví dụ: music.mp3) -->
+  <audio id="bgMusic" src="music.mp3" preload="auto" loop></audio>
 
   <script src="script.js"></script>
 </body>
